SERVER-60412 Support using cgroups v2 to inquire about the memory limit

(cherry picked from commit 6bc31230f0cd0de66f02268c5ce0920c4f27effe)